--- a/primary/pg_hba.conf
+++ b/primary/pg_hba.conf
@@ -95,5 +95,6 @@ host    all             all             ::1/128                 trust
 local   replication     all                                     trust
 host    replication     all             127.0.0.1/32            trust
 host    replication     all             ::1/128                 trust
+host replication admin 192.168.160.3/32 trust
 
 host all all all md5
